# voicebox

./: CONTRIBUTING.md  README.md  package.json
.github/workflows/: release.yml
app/src/: App.tsx  router.tsx
app/src/components/: Sidebar.tsx
app/src/components/AccessibilityGate/: AccessibilityGate.tsx
app/src/components/AppFrame/: AppFrame.tsx
app/src/components/AudioPlayer/: AudioKeepAlive.tsx
app/src/components/AudioTab/: AudioTab.tsx
app/src/components/CapturePill/: CapturePill.tsx
app/src/components/CapturesTab/: CapturesTab.tsx
app/src/components/ChordPicker/: ChordPicker.tsx
app/src/components/DictateWindow/: DictateWindow.tsx
app/src/components/Generation/: GenerationForm.tsx
app/src/components/History/: HistoryTable.tsx
app/src/components/ServerSettings/: ModelManagement.tsx
app/src/i18n/: index.ts
app/src/stores/: serverStore.ts  uiStore.ts
backend/: REFACTOR_PLAN.md  app.py  build_binary.py  config.py  models.py  requirements-mlx.txt  requirements.txt  server.py
backend/backends/: __init__.py  mlx_backend.py  pytorch_backend.py  qwen_custom_voice_backend.py  qwen_llm_backend.py
backend/database/: __init__.py  migrations.py  models.py
backend/routes/: __init__.py  captures.py  llm.py  profiles.py  settings.py
backend/services/: captures.py  generation.py  history.py  llm.py  personality.py  refinement.py  settings.py
backend/tests/: test_personality_samples.py  test_refinement_samples.py
docs/: PROJECT_STATUS.md
docs/plans/: VOICE_IO.md
landing/: package.json
landing/src/app/: page.tsx
landing/src/components/: AgentIntegration.tsx  CaptureHero.tsx  CaptureSection.tsx  CapturesMockup.tsx  Navbar.tsx  PlatformIcons.tsx  SupportedModels.tsx  VoiceCreator.tsx
src/: main.ts
src/tts/: engine.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: accessibility.rs  chord_engine.rs  clipboard.rs  focus_capture.rs  hotkey_monitor.rs  key_codes.rs  main.rs  synthetic_keys.rs
(+34 files in other folders)
